@@ -379,8 +379,12 @@ SetupNetwork() {
 
 	if [ "${binit_net_addr}" =  'dhcp' ]; then
 		einfo "Using DHCP on ${binit_net_if} ..."
-		run udhcpc -i "${binit_net_if}" -s /bin/dhcp-query -q -f
-		. /dhcp-query-result
+		if udhcpc -i "${binit_net_if}" -s /bin/dhcp-query -q -f -n
+			. /dhcp-query-result
+		else
+			ewarn "Failed to get network address via DHCP, continuing without network configured ..."
+			return
+		fi
 	fi
 
 	einfo "Setting ${binit_net_addr} on ${binit_net_if} ..."
